[build-system]
requires = ["setuptools>=61.0", "matplotlib", "seaborn", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "plotex"
version = "0.0.9"
authors = [
  { name="Rishabh Gupta", email="rishabhforprojects@gmail.com" },
]
description = "A minimal wrapper over matplotlib for generating clean and elegant plots for publications"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://www.rg089.ml/plotex"
"Github" = "https://github.com/rg089/plotex"
"Bug Tracker" = "https://github.com/rg089/plotex/issues"